# ctrnn-sim

./: .gitignore  Cargo.toml
mnist-sim/: Cargo.toml
mnist-sim/src/: headless_sim.rs  lib.rs  main.rs  tui_logger.rs
mnist-sim/tests/: ctrnn_diagnostics.rs  investigation.rs  simple_evolution.rs
sim-core/: Cargo.toml
sim-core/src/: lib.rs
sim-core/src/brain/: ctrnn.rs  mod.rs
viz-bevy/: Cargo.toml
viz-bevy/src/: main.rs
