[package]
name = "viz-bevy"
version = "0.1.0"
edition = "2024"

[dependencies]
burn = { workspace = true }
sim-core = { path = "../sim-core" }
mnist-sim = { path = "../mnist-sim" }
bevy = { version = "0.15", default-features = false, features = [
    "bevy_winit",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_ui",
    "bevy_asset",
    "multi_threaded",
    "x11",
    "tonemapping_luts",
    "default_font",
] }
bevy_egui = "0.32"
egui_plot = "0.30"
crossbeam-channel = "0.5"
serde = { workspace = true }
serde_json = "1.0"
